log
Sun 17 Sep 2023 10:27:24 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++-------------------------------------
 1 file changed, 23 insertions(+), 37 deletions(-)
 tests:  4|7
total_score: 5/70
4069d0c
Sun 17 Sep 2023 10:48:25 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeNode’:
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0e1aa58
Sun 17 Sep 2023 10:49:08 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
3cb4e25
Sun 17 Sep 2023 10:52:31 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
a51c250
